# GoLmm

./: .gitignore  AUTHORS  CMakeLists.txt  ChangeLog  README.md
src/: CMakeLists.txt  config.h.in  golarea.cpp  golarea.h  golwin.cpp  golwin.h  kernel.cl  main.cpp
